Fix text-align property

--- a/src/scss/app/_tip-calculator.scss
+++ b/src/scss/app/_tip-calculator.scss
@@ -87,7 +87,7 @@
         outline-color: colors.$strong-cyan;
 
         font: 700 1.5em fonts.$space-mono;
-        text-align: end;
+        text-align: right;
         color: colors.$very-dark-cyan;
 
         &::placeholder {
@@ -210,7 +210,7 @@
         color: colors.$very-dark-cyan;
 
         @media screen and (min-width: 1024px) {
-            text-align: end;
+            text-align: right;
         }
 
         &::placeholder {
@@ -287,7 +287,7 @@
         color: colors.$strong-cyan;
         font-weight: 700;
         font-size: 2em;
-        text-align: end;
+        text-align: right;
 
         @media screen and (min-width: 1024px) {
             font-size: 3em;
